--- a/recipes/brioche.html
+++ b/recipes/brioche.html
@@ -7,5 +7,39 @@
 </head>
 <body>
     <h1>Brioche</h1>
+    <img href="../images/brioche.png" alt="brioche">
+    <h2>Description</h2>
+    <p>Brioche is a soft, slightly sweet bread enriched with butter and eggs, giving it a tender crumb and a rich flavor. Often enjoyed as a simple slice with a spread of jam or used as a base for French toast, brioche pairs wonderfully with coffee. Its delicate sweetness and pillowy texture make it a popular choice for breakfast and brunch menus.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 tablespoon active dry yeast</li>
+        <li>⅓ cup warm water (110 degrees F)</li>
+        <li>3 ½ cups all-purpose flour</li>
+        <li>1 tablespoon white sugar</li>
+        <li>1 teaspoon salt</li>
+        <li>4 large eggs</li>
+        <li>1 cup butter, softened</li>
+        <li>½ teaspoon vegetable oil, or as needed</li>
+        <li>1 large egg yolk</li>
+        <li>1 teaspoon cold water</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Dissolve yeast in warm water in a small bowl. Let stand until creamy, about 10 minutes.</li>
+        <li>Stir together flour, sugar, and salt in a large bowl. Make a well in the center, then add eggs and yeast mixture; beat well until dough comes together. (Tip: Add 1 to 3 tablespoons of additional warm water, 1 tablespoon at a time, only if needed to help the dough come together.)</li>
+        <li>Turn dough out onto a lightly floured surface and knead until smooth and supple, about 8 minutes.</li>
+        <li>Flatten dough and spread it with 1/3 of the butter.</li>
+        <li>Knead butter into dough.</li>
+        <li>Repeat this step twice to incorporate remaining butter, allowing dough to rest for a few minutes between additions of butter, about 20 minutes total.</li>
+        <li>Lightly grease a large bowl with vegetable oil, place dough in the bowl, and turn to coat. Cover with plastic wrap and let rise in a warm place until doubled in volume, about 1 hour.</li>
+        <li>Punch down dough, cover with plastic wrap, and refrigerate for 6 hours to overnight.</li>
+        <li>Preheat the oven to 400 degrees F (200 degrees C). Lightly grease two 8x4-inch loaf pans.</li>
+        <li>Turn dough out onto a lightly floured surface. Divide dough into 2 equal pieces, form into loaves, and place into the prepared loaf pans.</li>
+        <li>Cover with greased plastic wrap and let rise until doubled in volume, about 1 hour.</li>
+        <li>Make egg wash: Beat egg yolk and cold water in a small bowl. Brush on the tops of loaves.</li>
+        <li>Bake loaves in the preheated oven until the tops are deep golden brown, about 25 minutes. Cool in the pans for 10 minutes before transferring to wire racks to cool completely.</li>
+        <li></li>
+    </ol>
 </body>
 </html>
