--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/baguette.html">Baguette</a>
-    <a href="./recipes/brioche.html">Brioche</a>
-    <a href="./recipes/croissant.html">Croissant</a>
-    <a href="./recipes/pain-au-chocolat.html">Pain au Chocolat</a>
+    <ul>
+        <li><a href="./recipes/baguette.html">Baguette</a></li>
+        <li><a href="./recipes/brioche.html">Brioche</a></li>
+        <li><a href="./recipes/croissant.html">Croissant</a></li>
+        <li><a href="./recipes/pain-au-chocolat.html">Pain au Chocolat</a></li>
+    </ul>
 </body>
 </html>
