--- a/recipes/croissant.html
+++ b/recipes/croissant.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Croissant | Odin Recipes</title>
 </head>
 <body>
     <h1>Croissant</h1>
-    <img href="../images/croissant.png">
+    <img href="../images/croissant.png" alt="croissant">
     <h2>Description</h2>
     <p>Croissants are iconic French pastries known for their crescent shape, buttery flavor, and flaky texture. Made from laminated dough, they have multiple layers that create a light, airy interior and a crisp, golden-brown exterior. Perfectly paired with a hot cup of coffee, croissants are a breakfast staple and a popular choice for any time of the day.</p>
     <h2>Ingredients</h2>
